--- a/index.html
+++ b/index.html
@@ -39,19 +39,20 @@
           </div>
           <a href="">關於我</a>
           <div class="dropdown">
-            <button class="dropbtn">詩詞大全</button>
+            <button class="dropbtn">文章列表版型</button>
             <div class="dropdown-content">
-              <a href="">唐詩三百首</a>
-              <a href="">宋詞三百首</a>
-              <a href="">古詩十九首</a>
+              <a href="">文字標題列表</a>
+              <a href="">圖文列表</a>
+              <a href="">分類式圖文列表</a>
             </div>
           </div>
           <div class="dropdown">
-            <button class="dropbtn">歷代著名詩人</button>
+            <button class="dropbtn">相簿版型</button>
             <div class="dropdown-content">
-              <a href="">唐代著名詩人</a>
-              <a href="">宋代著名詩人</a>
-              <a href="">初唐四傑</a>
+              <a href="">滿版型相簿</a>
+              <a href="">一般型相簿</a>
+              <a href="">Flex Panel相簿</a>
+              <a href="">Grid Image相簿</a>
             </div>
           </div>
           <a href="">與我聯絡</a>
@@ -59,30 +60,6 @@
       </div>
     </div>
   </header>
-  <script>
-    const navCollapse = document.querySelector(".navbar-collapse");
-    const menuBtn = document.querySelector(".menuBtn");
-    const menuCloseBtn = document.querySelector(".menuCloseBtn");
-
-    function openNav() {
-      console.log(this);
-      navCollapse.classList.add("open");
-    }
-
-    function closeNav() {
-      console.log(this);
-      navCollapse.classList.remove("open");
-    }
-
-    function resizeHandler() {
-      if (window.visualViewport.width > 600)
-      navCollapse.classList.remove("open");
-    }
-
-    menuBtn.addEventListener("click", openNav);
-    menuCloseBtn.addEventListener("click", closeNav);
-    window.visualViewport.addEventListener('resize', resizeHandler);
-  </script>
   <!-- ==============================
   video
   =================================== -->
@@ -237,5 +214,9 @@
     <p class="copyright">2021 Copyright &copy; my website All rights reserved.</p>
     <a href="index.html"><img id="logo" src="images/logo.png" alt=""></a>
   </footer>
+  <!-- ==============================
+  script
+  =================================== -->
+  <script src="scripts.js"></script>
 </body>
 </html>
