--- a/index.html
+++ b/index.html
@@ -31,36 +31,36 @@
         <button type="button" class="menuCloseBtn">&#10006;</button>
         <nav class="navbar-list">
           <div class="dropdown">
-            <button class="dropbtn">首頁版型</button>
+            <div class="dropbtn">首頁版型</div>
             <div class="dropdown-content">
-              <a href="">影音首頁</a>
-              <a href="">輪播圖首頁</a>
+              <a href="index.html">影音首頁</a>
+              <a href="index-slider.html">輪播圖首頁</a>
             </div>
           </div>
-          <a href="">關於我</a>
+          <a href="about.html">關於我</a>
           <div class="dropdown">
-            <button class="dropbtn">文章列表版型</button>
+            <div class="dropbtn">文章列表版型</div>
             <div class="dropdown-content">
-              <a href="">文字標題列表</a>
-              <a href="">圖文列表</a>
-              <a href="">分類式圖文列表</a>
+              <a href="news.html">文字標題列表</a>
+              <a href="news-text.html">圖文列表</a>
+              <a href="news-sort.html">分類式圖文列表</a>
             </div>
           </div>
           <div class="dropdown">
-            <button class="dropbtn">相簿版型</button>
+            <div class="dropbtn">相簿版型</div>
             <div class="dropdown-content">
-              <a href="">滿版型相簿</a>
-              <a href="">一般型相簿</a>
-              <a href="">Flex Panel相簿</a>
-              <a href="">Grid Image相簿</a>
+              <a href="gallery.html">滿版型相簿</a>
+              <a href="gallery-4.html">一般型相簿</a>
+              <a href="gallery-flex.html">Flex Panel相簿</a>
+              <a href="gallery-grid.html">Grid Image相簿</a>
             </div>
           </div>
-          <a href="">與我聯絡</a>
+          <a href="contact.html">與我聯絡</a>
         </nav>
       </div>
     </div>
   </header>
-  <!-- ==============================
+    <!-- ==============================
   video
   =================================== -->
   <div class="videowrap">
