--- a/index-slider.html
+++ b/index-slider.html
@@ -41,8 +41,8 @@
           <div class="dropdown">
             <div class="dropbtn">文章列表版型</div>
             <div class="dropdown-content">
-              <a href="news.html">文字標題列表</a>
-              <a href="news-text.html">圖文列表</a>
+              <a href="news-text.html">文字標題列表</a>
+              <a href="news-image.html">圖文列表</a>
               <a href="news-sort.html">分類式圖文列表</a>
             </div>
           </div>
@@ -120,7 +120,7 @@
   <!-- ==============================
   latest updates
   =================================== -->
-  <section id="update">
+  <section class="update">
     <h2 class="title">最新更新詩詞名句</h2>
     <p class="tagline">Latest Updated Poetry</p>
     <div class="newpoem-container">
