--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
     <p class="tagline">Latest Updated Poetry</p>
     <div class="newpoem-container">
       <div class="newpoem">
-        <div class="newpoem-thumb">
-          <img src="images/jr-korpa-1.jpg" alt="">
-          <div class="newpoem-quote">
+        <div class="newpoem-thumb view-overlay">
+          <img src="images/news1.jpg" alt="">
+          <div class="newpoem-quote mask">
             <p><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 雨中花慢•邃院重簾何處</a><br>
               "2021年2月18日"</p>
           </div>
@@ -125,9 +125,9 @@
         </div>
       </div>
       <div class="newpoem">
-        <div class="newpoem-thumb">
-          <img src="images/jr-korpa-2.jpg" alt="">
-          <div class="newpoem-quote">
+        <div class="newpoem-thumb view-overlay">
+          <img src="images/news2.jpg" alt="">
+          <div class="newpoem-quote mask">
             <p><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 漁家傲•臨水縱橫回晚鞚</a><br>
               "2021年2月18日"</p>
           </div>
@@ -138,9 +138,9 @@
         </div>
       </div>
       <div class="newpoem">
-        <div class="newpoem-thumb">
-          <img src="images/jr-korpa-3.jpg" alt="">
-          <div class="newpoem-quote">
+        <div class="newpoem-thumb view-overlay">
+          <img src="images/news3.jpg" alt="">
+          <div class="newpoem-quote mask">
             <p><a href=""><span class="false">名句</span>名花傾國兩相歡，常得君王帶笑看。</a><br>
               "2021年2月18日"</p>
           </div>
@@ -151,9 +151,9 @@
         </div>
       </div>
       <div class="newpoem">
-        <div class="newpoem-thumb">
-          <img src="images/jr-korpa-4.jpg" alt="">
-          <div class="newpoem-quote">
+        <div class="newpoem-thumb view-overlay">
+          <img src="images/news4.jpg" alt="">
+          <div class="newpoem-quote mask">
             <p><a href=""><span class="false">名句</span>念橋邊紅藥，年年知爲誰生。</a><br>
               "2021年2月18日"</p>
           </div>
@@ -217,6 +217,6 @@
   <!-- ==============================
   script
   =================================== -->
-  <script src="scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
