--- a/news-sort.html
+++ b/news-sort.html
@@ -76,62 +76,51 @@
   <!-- ==============================
   latest updates
   =================================== -->
-  <section id="startcontent" class="update">
-    <h2 class="title">最新更新詩詞名句</h2>
-    <p class="tagline">Latest Updated Poetry</p>
-    <div class="newpoem-container">
-      <div class="newpoem">
-        <div class="newpoem-thumb">
-          <img src="images/jr-korpa-1.jpg" alt="">
-          <div class="newpoem-quote">
-            <p><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 雨中花慢•邃院重簾何處</a><br>
-              "2021年2月18日"</p>
+  <section id="startcontent" class="sort-update">
+    <ul id="news-filter">
+      <li><a href="#" class="filterBtn active" onclick="filter('all')">所有</a></li>
+      <li><a href="#" class="filterBtn" onclick="filter('poem')">詩詞</a></li>
+      <li><a href="#" class="filterBtn" onclick="filter('sentence')">名句</a></li>
+      <li><a href="#" class="filterBtn" onclick="filter('tong')">唐代</a></li>
+      <li><a href="#" class="filterBtn" onclick="filter('song')">宋代</a></li>
+    </ul>
+    <div class="sort-container">
+      <article class="sort poem song">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news1.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
           </div>
+          <h3>雨中花慢•邃院重簾何處</h3>
         </div>
-        <div class="newpoem-info">
-          <h2><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 雨中花慢•邃院重簾何處</a></h2>
-          <p>[2021年2月18日]</p>
-        </div>
-      </div>
-      <div class="newpoem">
-        <div class="newpoem-thumb">
-          <img src="images/jr-korpa-2.jpg" alt="">
-          <div class="newpoem-quote">
-            <p><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 漁家傲•臨水縱橫回晚鞚</a><br>
-              "2021年2月18日"</p>
+      </article>
+      <article class="sort poem song">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news2.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
           </div>
+          <h3>漁家傲•臨水縱橫回晚鞚</h3>
         </div>
-        <div class="newpoem-info">
-          <h2><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 漁家傲•臨水縱橫回晚鞚</a></h2>
-          <p>[2021年2月18日]</p>
-        </div>
-      </div>
-      <div class="newpoem">
-        <div class="newpoem-thumb">
-          <img src="images/jr-korpa-3.jpg" alt="">
-          <div class="newpoem-quote">
-            <p><a href=""><span class="false">名句</span>名花傾國兩相歡，常得君王帶笑看。</a><br>
-              "2021年2月18日"</p>
+      </article>
+      <article class="sort sentence tong">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news3.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
           </div>
+          <h3>名花傾國兩相歡，常得君王帶笑看。</h3>
         </div>
-        <div class="newpoem-info">
-          <h2><a href=""><span class="false">名句</span>名花傾國兩相歡，常得君王帶笑看。</a></h2>
-          <p>[2021年2月18日]</p>
-        </div>
-      </div>
-      <div class="newpoem">
-        <div class="newpoem-thumb">
-          <img src="images/jr-korpa-4.jpg" alt="">
-          <div class="newpoem-quote">
-            <p><a href=""><span class="false">名句</span>念橋邊紅藥，年年知爲誰生。</a><br>
-              "2021年2月18日"</p>
+      </article>
+      <article class="sort sentence song">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news4.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
           </div>
+          <h3>念橋邊紅藥，年年知爲誰生。</h3>
         </div>
-        <div class="newpoem-info">
-          <h2><a href=""><span class="false">名句</span>念橋邊紅藥，年年知爲誰生。</a></h2>
-          <p>[2021年2月18日]</p>
-        </div>
-      </div>
+      </article>
     </div>
   </section>
   <!-- ==============================
@@ -144,6 +133,7 @@
   <!-- ==============================
   script
   =================================== -->
-  <script src="scripts.js"></script>
+  <script src="js/scripts.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 </html>
