--- a/news-text.html
+++ b/news-text.html
@@ -80,7 +80,7 @@
     <h2 class="title">最新更新詩詞名句</h2>
     <p class="tagline">Latest Updated Poetry</p>
     <article class="text-newpoem" >
-      <img src="images/jr-korpa-1.jpg" alt="">
+      <img src="images/news1.jpg" alt="">
       <div class="text-info">
         <h2><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 雨中花慢•邃院重簾何處</a></h2>
         <p>圖文並茂文章內容頁</p>
@@ -89,7 +89,7 @@
       </div>
     </article>
     <article class="text-newpoem" >
-      <img src="images/jr-korpa-2.jpg" alt="">
+      <img src="images/news2.jpg" alt="">
       <div class="text-info">
         <h2><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 漁家傲•臨水縱橫回晚鞚</a></h2>
         <p>大圖文章內容頁</p>
@@ -98,7 +98,7 @@
       </div>
     </article>
     <article class="text-newpoem" >
-      <img src="images/jr-korpa-3.jpg" alt="">
+      <img src="images/news3.jpg" alt="">
       <div class="text-info">
         <h2><a href=""><span class="false">名句</span>名花傾國兩相歡，常得君王帶笑看。</a></h2>
         <p>圖文左右編排內容頁</p>
@@ -107,7 +107,7 @@
       </div>
     </article>
     <article class="text-newpoem" >
-      <img src="images/jr-korpa-4.jpg" alt="">
+      <img src="images/news4.jpg" alt="">
       <div class="text-info">
         <h2><a href=""><span class="false">名句</span>念橋邊紅藥，年年知爲誰生。</a></h2>
         <p>單純文字內容頁</p>
@@ -126,6 +126,6 @@
   <!-- ==============================
   script
   =================================== -->
-  <script src="scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
