--- a/news-sort.html
+++ b/news-sort.html
@@ -78,11 +78,11 @@
   =================================== -->
   <section id="startcontent" class="sort-update">
     <ul id="news-filter">
-      <li><a href="#" class="filterBtn active" onclick="filter('all')">所有</a></li>
-      <li><a href="#" class="filterBtn" onclick="filter('poem')">詩詞</a></li>
-      <li><a href="#" class="filterBtn" onclick="filter('sentence')">名句</a></li>
-      <li><a href="#" class="filterBtn" onclick="filter('tong')">唐代</a></li>
-      <li><a href="#" class="filterBtn" onclick="filter('song')">宋代</a></li>
+      <li><a href="#" class="filterBtn active" data-type="all">所有</a></li>
+      <li><a href="#" class="filterBtn" data-type="poem">詩詞</a></li>
+      <li><a href="#" class="filterBtn" data-type="sentence">名句</a></li>
+      <li><a href="#" class="filterBtn" data-type="tong">唐代</a></li>
+      <li><a href="#" class="filterBtn" data-type="song">宋代</a></li>
     </ul>
     <div class="sort-container">
       <article class="sort poem song">
