--- a/news-sort.html
+++ b/news-sort.html
@@ -63,10 +63,10 @@
   <!-- ==============================
   top image
   =================================== -->
-  <section id="newsTop">
-    <div class="newsTop-container">
+  <section id="aboutTop top">
+    <div class="aboutTop-container top-container">
       <img src="images/top-news.jpg" alt="">
-      <div class="newsTop-content">
+      <div class="aboutTop-content top-content">
         <h2 class="title">最新詩詞</h2>
         <p class="tagline">Latest Poetry</p>
         <a href="#startcontent">&raquo;</a>
@@ -85,6 +85,78 @@
       <li><a href="#" class="filterBtn" data-type="song">宋代</a></li>
     </ul>
     <div class="sort-container">
+      <article class="sort poem song">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news1.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
+          </div>
+          <h3>雨中花慢•邃院重簾何處</h3>
+        </div>
+      </article>
+      <article class="sort poem song">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news2.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
+          </div>
+          <h3>漁家傲•臨水縱橫回晚鞚</h3>
+        </div>
+      </article>
+      <article class="sort sentence tong">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news3.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
+          </div>
+          <h3>名花傾國兩相歡，常得君王帶笑看。</h3>
+        </div>
+      </article>
+      <article class="sort sentence song">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news4.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
+          </div>
+          <h3>念橋邊紅藥，年年知爲誰生。</h3>
+        </div>
+      </article>
+      <article class="sort poem song">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news1.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
+          </div>
+          <h3>雨中花慢•邃院重簾何處</h3>
+        </div>
+      </article>
+      <article class="sort poem song">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news2.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
+          </div>
+          <h3>漁家傲•臨水縱橫回晚鞚</h3>
+        </div>
+      </article>
+      <article class="sort sentence tong">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news3.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
+          </div>
+          <h3>名花傾國兩相歡，常得君王帶笑看。</h3>
+        </div>
+      </article>
+      <article class="sort sentence song">
+        <div class="sort-thumb view-overlay">
+          <img src="images/news4.jpg" alt="">
+          <div class="sort-quote mask">
+            <a href=""><span class="icon">&#10044;</span>Details</a>
+          </div>
+          <h3>念橋邊紅藥，年年知爲誰生。</h3>
+        </div>
+      </article>
       <article class="sort poem song">
         <div class="sort-thumb view-overlay">
           <img src="images/news1.jpg" alt="">
