--- a/news-text.html
+++ b/news-text.html
@@ -63,10 +63,10 @@
   <!-- ==============================
   top image
   =================================== -->
-  <section id="newsTop">
-    <div class="newsTop-container">
+  <section id="aboutTop top">
+    <div class="aboutTop-container top-container">
       <img src="images/top-news.jpg" alt="">
-      <div class="newsTop-content">
+      <div class="aboutTop-content top-content">
         <h2 class="title">最新詩詞</h2>
         <p class="tagline">Latest Poetry</p>
         <a href="#startcontent">&raquo;</a>
