update top-image style

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
       <div class="contactTop-content top-content">
         <h2 class="title">與我們聯絡</h2>
         <p class="tagline">Contact Us</p>
-        <a href="#startcontent">&raquo;</a>
+        <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
       </div>
     </div>
   </section>
