--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,7 @@
       <img src="images/top-gallery.jpg" alt="">
       <div class="galleryTop-content top-content">
         <h2 class="title">Photo Gallery</h2>
-        <a href="#startcontent">&raquo;</a>
+        <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
       </div>
     </div>
   </section>
