--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
       <div class="aboutTop-content top-content">
         <h2 class="title">關於我們</h2>
         <p class="tagline">About Us</p>
-        <a href="#startcontent">&raquo;</a>
+        <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
       </div>
     </div>
   </section>
