--- a/news-text.html
+++ b/news-text.html
@@ -69,7 +69,7 @@
       <div class="aboutTop-content top-content">
         <h2 class="title">最新詩詞</h2>
         <p class="tagline">Latest Poetry</p>
-        <a href="#startcontent">&raquo;</a>
+        <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
       </div>
     </div>
   </section>
