update filter and scroll smooth

--- a/news-sort.html
+++ b/news-sort.html
@@ -78,11 +78,11 @@
   =================================== -->
   <section id="startcontent" class="sort-update">
     <ul id="news-filter">
-      <li><a href="#" class="filterBtn active" data-type="all">所有</a></li>
-      <li><a href="#" class="filterBtn" data-type="poem">詩詞</a></li>
-      <li><a href="#" class="filterBtn" data-type="sentence">名句</a></li>
-      <li><a href="#" class="filterBtn" data-type="tong">唐代</a></li>
-      <li><a href="#" class="filterBtn" data-type="song">宋代</a></li>
+      <li><a href="#" class="filterBtn active" data-type="all"><span>所有</span></a></li>
+      <li><a href="#" class="filterBtn" data-type="poem"><span>詩詞</span></a></li>
+      <li><a href="#" class="filterBtn" data-type="sentence"><span>名句</span></a></li>
+      <li><a href="#" class="filterBtn" data-type="tong"><span>唐代</span></a></li>
+      <li><a href="#" class="filterBtn" data-type="song"><span>宋代</span></a></li>
     </ul>
     <div class="sort-container">
       <article class="sort poem song">
