--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,76 @@
   latest updates
   =================================== -->
   <section id="startcontent" class="gallery">
-
+    <h2 class="title">相簿集</h2>
+    <p class="tagline">Photo Gallery</p>
+    <div class="gallery-content gallery-overlay">
+      <div class="gallery-overlayInner">
+        <button type="button" class="galleryCloseBtn">&#10006;</button>
+        <img src="" alt="">
+      </div>
+    </div>
+    <div class="gallery-container">
+      <div class="gallery-image">
+        <img src="images/gallery1.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery2.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery3.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery4.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery5.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery6.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery7.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery8.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery9.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery10.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery11.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery12.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery13.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery14.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery15.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery16.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery17.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery18.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery19.jpg" alt="">
+      </div>
+      <div class="gallery-image">
+        <img src="images/gallery20.jpg" alt="">
+      </div>
+    </div>
   </section>
   <!-- ==============================
   footer
@@ -89,5 +158,6 @@
   script
   =================================== -->
   <script src="js/scripts.js"></script>
+  <script src="js/gallery.js"></script>
 </body>
 </html>
