--- a/about.html
+++ b/about.html
@@ -76,8 +76,48 @@
   <!-- ==============================
   latest updates
   =================================== -->
-  <section id="startcontent" class="about">
-
+  <section id="startcontent" class="aboutUs">
+    <ul class="sidebar">
+      <li class="menuTitle">關於中國科技大學</li>
+      <li class="sec1"><a href="#sec1">1. 傳說導覽</a></li>
+      <li class="sec2"><a href="#sec2">2. 校史資料</a></li>
+      <li class="sec3"><a href="#sec3">3. 校訓</a></li>
+    </ul>
+    <div class="aboutUs-content">
+      <div id="sec1" class="sec">
+        <h2 >1. 傳說導覽</h2>
+        <div class="aboutSec">
+          <p>
+            <img src="images/university.jpg" alt="" class="img-right">
+            創立於民國五十四年，前身為「中國市政專校」、七十二年配合國家發展，更名為「中國工商專科學校」、八十九年改制為「中國技術學院」，九十四年八月正式改名為「中國科技大學」。 　 本校設雙校區，台北文山校區〈校地面積5公頃〉，交通便利，位於捷運萬芳醫院站，校園照景美不勝收，登山步道裡可以傾聽鳥聲蟲鳴，更能鍛鍊身體，古典平台吸引同學們駐足討論休閒氣氛愉悅；新竹湖口校區〈校地面積14公頃〉，靠近工業區與區域性產業結合，寬廣湖泊能讓學生心胸寬闊，校園環境幽雅，各項設備完善，是展開學習生涯的最佳場所。</p>
+          <p>創立於民國五十四年，前身為「中國市政專校」、七十二年配合國家發展，更名為「中國工商專科學校」、八十九年改制為「中國技術學院」，九十四年八月正式改名為「中國科技大學」。 　 本校設雙校區，台北文山校區〈校地面積5公頃〉，交通便利，位於捷運萬芳醫院站，校園照景美不勝收，登山步道裡可以傾聽鳥聲蟲鳴，更能鍛鍊身體，古典平台吸引同學們駐足討論休閒氣氛愉悅；新竹湖口校區〈校地面積14公頃〉，靠近工業區與區域性產業結合，寬廣湖泊能讓學生心胸寬闊，校園環境幽雅，各項設備完善，是展開學習生涯的最佳場所。</p>
+          <p>創立於民國五十四年，前身為「中國市政專校」、七十二年配合國家發展，更名為「中國工商專科學校」、八十九年改制為「中國技術學院」，九十四年八月正式改名為「中國科技大學」。 　 本校設雙校區，台北文山校區〈校地面積5公頃〉，交通便利，位於捷運萬芳醫院站，校園照景美不勝收，登山步道裡可以傾聽鳥聲蟲鳴，更能鍛鍊身體，古典平台吸引同學們駐足討論休閒氣氛愉悅；新竹湖口校區〈校地面積14公頃〉，靠近工業區與區域性產業結合，寬廣湖泊能讓學生心胸寬闊，校園環境幽雅，各項設備完善，是展開學習生涯的最佳場所。</p>
+          <p>創立於民國五十四年，前身為「中國市政專校」、七十二年配合國家發展，更名為「中國工商專科學校」、八十九年改制為「中國技術學院」，九十四年八月正式改名為「中國科技大學」。 　 本校設雙校區，台北文山校區〈校地面積5公頃〉，交通便利，位於捷運萬芳醫院站，校園照景美不勝收，登山步道裡可以傾聽鳥聲蟲鳴，更能鍛鍊身體，古典平台吸引同學們駐足討論休閒氣氛愉悅；新竹湖口校區〈校地面積14公頃〉，靠近工業區與區域性產業結合，寬廣湖泊能讓學生心胸寬闊，校園環境幽雅，各項設備完善，是展開學習生涯的最佳場所。</p>
+        </div>
+      </div>
+      <div id="sec2" class="sec">
+        <h2>2. 校史資料</h2>
+        <div class="aboutSec">
+          <p>本校前身為「私立中國市政專科學校」，設校址於台北市文山區興隆路三段。創辦人上官業佑先生歷任政府要職，有感於政府各項公職人員之培養，關係國家盛衰，屢次親赴歐美考察市政建設，遂有創辦市政專科學校之議，期許作育國家建設之中級幹部。民國54年11月，我國教育史上唯一的一所五年制之市政專科學校於焉誕生。</p>
+          <p>本校前身為「私立中國市政專科學校」，設校址於台北市文山區興隆路三段。創辦人上官業佑先生歷任政府要職，有感於政府各項公職人員之培養，關係國家盛衰，屢次親赴歐美考察市政建設，遂有創辦市政專科學校之議，期許作育國家建設之中級幹部。民國54年11月，我國教育史上唯一的一所五年制之市政專科學校於焉誕生。</p>
+          <p>本校前身為「私立中國市政專科學校」，設校址於台北市文山區興隆路三段。創辦人上官業佑先生歷任政府要職，有感於政府各項公職人員之培養，關係國家盛衰，屢次親赴歐美考察市政建設，遂有創辦市政專科學校之議，期許作育國家建設之中級幹部。民國54年11月，我國教育史上唯一的一所五年制之市政專科學校於焉誕生。</p>
+          <p>本校前身為「私立中國市政專科學校」，設校址於台北市文山區興隆路三段。創辦人上官業佑先生歷任政府要職，有感於政府各項公職人員之培養，關係國家盛衰，屢次親赴歐美考察市政建設，遂有創辦市政專科學校之議，期許作育國家建設之中級幹部。民國54年11月，我國教育史上唯一的一所五年制之市政專科學校於焉誕生。</p>
+          <p>本校前身為「私立中國市政專科學校」，設校址於台北市文山區興隆路三段。創辦人上官業佑先生歷任政府要職，有感於政府各項公職人員之培養，關係國家盛衰，屢次親赴歐美考察市政建設，遂有創辦市政專科學校之議，期許作育國家建設之中級幹部。民國54年11月，我國教育史上唯一的一所五年制之市政專科學校於焉誕生。</p>
+        </div>
+      </div>
+      <div id="sec3" class="sec">
+        <h2>3. 校訓</h2>
+        <div class="aboutSec">
+          <p>本校校訓是「公誠廉勇」四個字，全校師生都要切實領悟，身體力行，其內涵如下：</p>
+          <ol>
+            <li>公在去私：要待人公平、要處事公正、要持論公允、要存心公道。</li>
+            <li>誠在去偽：要不虛偽說謊、要不苟且敷衍、要不勾心鬥角、要不吹毛求疵。</li>
+            <li>廉在去貪：要明辨是非、要公私分明、要取之有道、要滅絕浪費。</li>
+            <li>勇在去怯：要見義勇為、要知恥負責、要受命不辱、要克服困難。</li>
+          </ol>
+        </div>
+      </div>
+    </div>
   </section>
   <!-- ==============================
   footer
@@ -90,5 +130,6 @@
   script
   =================================== -->
   <script src="js/scripts.js"></script>
+  <script src="js/aboutUs.js"></script>
 </body>
 </html>
