--- a/news-sort.html
+++ b/news-sort.html
@@ -11,7 +11,8 @@
   <title>Poetry</title>
   <link rel="icon" href="images/icon.jpg">
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <script src="https://kit.fontawesome.com/f49a20a247.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- ==============================
