--- a/contact.html
+++ b/contact.html
@@ -75,11 +75,20 @@
     </div>
   </section>
   <!-- ==============================
-  latest updates
+  contact
   =================================== -->
-  <section id="startcontent" class="contact">
-
+  <section id="startcontent" class="contact-map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3618.3982936533876!2d121.05608400000001!3d24.918498!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x32c97cc8e841e47b!2sChina%20University%20of%20Technology%20%2C%20Hsinchu%20campus!5e0!3m2!1sen!2stw!4v1615285763789!5m2!1sen!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </section>
+  <section class="contact-info">
+    <div class="contact-container">
+      <h1>聯絡資訊</h1>
+      <p><i class="fa fa-map-marker"></i> 303新竹縣湖口鄉中山路三段530號</p>
+      <p><i class="fas fa-phone"></i> 03-6991111</p>
+      <p><i class="fas fa-envelope"></i> office@dayu.com</p>
+      <p><i class="fas fa-clock"></i> Mon - Sat: 9:00 - 21:00</p>
+    </section>
+    </div>
   <!-- ==============================
   footer
   =================================== -->
