--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
     </div>
   </section>
   <!-- ==============================
-  latest updates
+  aboutUs
   =================================== -->
   <section id="startcontent" class="aboutUs">
     <ul class="sidebar">
