--- a/gallery-flex.html
+++ b/gallery-flex.html
@@ -74,83 +74,11 @@
     </div>
   </section>
   <!-- ==============================
-  latest updates
+  gallery
   =================================== -->
   <section id="startcontent" class="gallery">
     <h2 class="title">相簿集</h2>
     <p class="tagline">Photo Gallery</p>
-    <div class="gallery-content gallery-overlay">
-      <div class="gallery-overlayInner">
-        <button type="button" class="galleryCloseBtn">&#10008; Close</button>
-        <div class="gallery-overlayImage">
-          <img src="" alt="">
-          <a class="overlayBtn gallery-prev" onclick="plusImages(-1)"><span>&cularr;</span></a>
-          <a class="overlayBtn gallery-next" onclick="plusImages(1)"><span>&curarr;</span></a>
-        </div>
-      </div>
-    </div>
-    <div class="gallery-container">
-      <div class="gallery-image" data-no="1">
-        <img src="images/gallery1.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="2">
-        <img src="images/gallery2.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="3">
-        <img src="images/gallery3.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="4">
-        <img src="images/gallery4.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="5">
-        <img src="images/gallery5.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="6">
-        <img src="images/gallery6.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="7">
-        <img src="images/gallery7.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="8">
-        <img src="images/gallery8.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="9">
-        <img src="images/gallery9.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="10">
-        <img src="images/gallery10.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="11">
-        <img src="images/gallery11.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="12">
-        <img src="images/gallery12.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="13">
-        <img src="images/gallery13.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="14">
-        <img src="images/gallery14.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="15">
-        <img src="images/gallery15.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="16">
-        <img src="images/gallery16.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="17">
-        <img src="images/gallery17.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="18">
-        <img src="images/gallery18.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="19">
-        <img src="images/gallery19.jpg" alt="">
-      </div>
-      <div class="gallery-image" data-no="20">
-        <img src="images/gallery20.jpg" alt="">
-      </div>
-    </div>
   </section>
   <!-- ==============================
   footer
