--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
     </div>
   </section>
   <!-- ==============================
-  latest updates
+  gallery
   =================================== -->
   <section id="startcontent" class="gallery">
     <h2 class="title">相簿集</h2>
