--- a/contact.html
+++ b/contact.html
@@ -64,14 +64,12 @@
   <!-- ==============================
   top image
   =================================== -->
-  <section id="contactTop top">
-    <div class="contactTop-container top-container">
-      <img src="images/top-contact.jpg" alt="">
-      <div class="contactTop-content top-content">
-        <h2 class="title">與我們聯絡</h2>
-        <p class="tagline">Contact Us</p>
-        <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
-      </div>
+  <section class="contactTop top-container">
+    <img src="images/top-contact.jpg" alt="">
+    <div class="contactTop-content top-content">
+      <h2 class="title">與我們聯絡</h2>
+      <p class="tagline">Contact Us</p>
+      <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
     </div>
   </section>
   <!-- ==============================
