--- a/gallery-grid.html
+++ b/gallery-grid.html
@@ -64,13 +64,11 @@
   <!-- ==============================
   top image
   =================================== -->
-  <section id="galleryTop top">
-    <div class="galleryTop-container top-container">
-      <img src="images/top-gallery.jpg" alt="">
-      <div class="galleryTop-content top-content">
-        <h2 class="title">Photo Gallery</h2>
-        <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
-      </div>
+  <section class="galleryTop top-container">
+    <img src="images/top-gallery.jpg" alt="">
+    <div class="galleryTop-content top-content">
+      <h2 class="title">Photo Gallery</h2>
+      <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
     </div>
   </section>
   <!-- ==============================
