--- a/news-text.html
+++ b/news-text.html
@@ -64,14 +64,12 @@
   <!-- ==============================
   top image
   =================================== -->
-  <section id="aboutTop top">
-    <div class="aboutTop-container top-container">
-      <img src="images/top-news.jpg" alt="">
-      <div class="aboutTop-content top-content">
-        <h2 class="title">最新詩詞</h2>
-        <p class="tagline">Latest Poetry</p>
-        <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
-      </div>
+  <section class="aboutTop top-container">
+    <img src="images/top-news.jpg" alt="">
+    <div class="aboutTop-content top-content">
+      <h2 class="title">最新詩詞</h2>
+      <p class="tagline">Latest Poetry</p>
+      <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
     </div>
   </section>
   <!-- ==============================
