--- a/index-slider.html
+++ b/index-slider.html
@@ -129,12 +129,12 @@
         <div class="newpoem-thumb view-overlay">
           <img src="images/news1.jpg" alt="">
           <div class="newpoem-quote mask">
-            <p><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 雨中花慢•邃院重簾何處</a><br>
+            <p><a href="news1.html"><span class="false">詩詞</span>(宋代•蘇軾) 雨中花慢•邃院重簾何處</a><br>
               "2021年2月18日"</p>
           </div>
         </div>
         <div class="newpoem-info">
-          <h2><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 雨中花慢•邃院重簾何處</a></h2>
+          <h2><a href="news1.html"><span class="false">詩詞</span>(宋代•蘇軾) 雨中花慢•邃院重簾何處</a></h2>
           <p>[2021年2月18日]</p>
         </div>
       </div>
@@ -142,12 +142,12 @@
         <div class="newpoem-thumb view-overlay">
           <img src="images/news2.jpg" alt="">
           <div class="newpoem-quote mask">
-            <p><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 漁家傲•臨水縱橫回晚鞚</a><br>
+            <p><a href="news2.html"><span class="false">詩詞</span>(宋代•蘇軾) 漁家傲•臨水縱橫回晚鞚</a><br>
               "2021年2月18日"</p>
           </div>
         </div>
         <div class="newpoem-info">
-          <h2><a href=""><span class="false">詩詞</span>(宋代•蘇軾) 漁家傲•臨水縱橫回晚鞚</a></h2>
+          <h2><a href="news2.html"><span class="false">詩詞</span>(宋代•蘇軾) 漁家傲•臨水縱橫回晚鞚</a></h2>
           <p>[2021年2月18日]</p>
         </div>
       </div>
@@ -155,12 +155,12 @@
         <div class="newpoem-thumb view-overlay">
           <img src="images/news3.jpg" alt="">
           <div class="newpoem-quote mask">
-            <p><a href=""><span class="false">名句</span>名花傾國兩相歡，常得君王帶笑看。</a><br>
+            <p><a href="news3.html"><span class="false">名句</span>名花傾國兩相歡，常得君王帶笑看。</a><br>
               "2021年2月18日"</p>
           </div>
         </div>
         <div class="newpoem-info">
-          <h2><a href=""><span class="false">名句</span>名花傾國兩相歡，常得君王帶笑看。</a></h2>
+          <h2><a href="news3.html"><span class="false">名句</span>名花傾國兩相歡，常得君王帶笑看。</a></h2>
           <p>[2021年2月18日]</p>
         </div>
       </div>
@@ -168,12 +168,12 @@
         <div class="newpoem-thumb view-overlay">
           <img src="images/news4.jpg" alt="">
           <div class="newpoem-quote mask">
-            <p><a href=""><span class="false">名句</span>念橋邊紅藥，年年知爲誰生。</a><br>
+            <p><a href="news4.html"><span class="false">名句</span>念橋邊紅藥，年年知爲誰生。</a><br>
               "2021年2月18日"</p>
           </div>
         </div>
         <div class="newpoem-info">
-          <h2><a href=""><span class="false">名句</span>念橋邊紅藥，年年知爲誰生。</a></h2>
+          <h2><a href="news4.html"><span class="false">名句</span>念橋邊紅藥，年年知爲誰生。</a></h2>
           <p>[2021年2月18日]</p>
         </div>
       </div>
