--- a/news-sort.html
+++ b/news-sort.html
@@ -88,7 +88,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news1.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news1.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>雨中花慢•邃院重簾何處</h3>
         </div>
@@ -97,7 +97,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news2.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news2.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>漁家傲•臨水縱橫回晚鞚</h3>
         </div>
@@ -106,7 +106,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news3.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news3.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>名花傾國兩相歡，常得君王帶笑看。</h3>
         </div>
@@ -115,7 +115,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news4.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news4.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>念橋邊紅藥，年年知爲誰生。</h3>
         </div>
@@ -124,7 +124,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news1.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news1.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>雨中花慢•邃院重簾何處</h3>
         </div>
@@ -133,7 +133,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news2.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news2.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>漁家傲•臨水縱橫回晚鞚</h3>
         </div>
@@ -142,7 +142,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news3.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news3.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>名花傾國兩相歡，常得君王帶笑看。</h3>
         </div>
@@ -151,7 +151,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news4.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news4.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>念橋邊紅藥，年年知爲誰生。</h3>
         </div>
@@ -160,7 +160,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news1.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news1.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>雨中花慢•邃院重簾何處</h3>
         </div>
@@ -169,7 +169,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news2.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news2.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>漁家傲•臨水縱橫回晚鞚</h3>
         </div>
@@ -178,7 +178,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news3.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news3.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>名花傾國兩相歡，常得君王帶笑看。</h3>
         </div>
@@ -187,7 +187,7 @@
         <div class="sort-thumb view-overlay">
           <img src="images/news4.jpg" alt="">
           <div class="sort-quote mask">
-            <a href=""><span class="icon">&#10044;</span>Details</a>
+            <a href="news4.html"><span class="icon">&#10044;</span>Details</a>
           </div>
           <h3>念橋邊紅藥，年年知爲誰生。</h3>
         </div>
