--- a/news3.html
+++ b/news3.html
@@ -75,39 +75,40 @@
   <!-- ==============================
   latest updates
   =================================== -->
-  <section id="startcontent" class="text-update">
+  <section id="startcontent" class="update poem-update">
     <h2 class="title">最新更新詩詞名句</h2>
     <p class="tagline">Latest Updated Poetry</p>
-    <article class="text-newpoem" >
-      <img src="images/news1.jpg" alt="">
-      <div class="text-info">
-        <h2><a href="news1.html"><span class="false">詩詞</span>(宋代•蘇軾) 雨中花慢•邃院重簾何處</a></h2>
-        <p class="text-date">[2021年2月18日]</p>
-        <p><a href="#"><span class="keyword">詩詞</span></a><a href="#"><span class="keyword">宋代</span></a><a href="#"><span class="keyword">蘇軾</span></a></p>
+    <article class="poem-container poem3">
+      <div class="poem-main">
+        <h1>清平調·名花傾國兩相歡</h1>
+        <p>朝代：唐代</p>
+        <p>作者：李白</p>
+        <p>原文：<br>
+          名花傾國兩相歡，常得君王帶笑看。<br>
+          解釋春風無限恨，沉香亭北倚欄杆。</p>
       </div>
-    </article>
-    <article class="text-newpoem" >
-      <img src="images/news2.jpg" alt="">
-      <div class="text-info">
-        <h2><a href="news2.html"><span class="false">詩詞</span>(宋代•蘇軾) 漁家傲•臨水縱橫回晚鞚</a></h2>
-        <p class="text-date">[2021年2月18日]</p>
-        <p><a href="#"><span class="keyword">詩詞</span></a><a href="#"><span class="keyword">宋代</span></a><a href="#"><span class="keyword">蘇軾</span></a></p>
+      <div class="poem-translation">
+        <h3>譯文及註釋</h3>
+        <h3>譯文</h3>
+        <p>絕代佳人與紅豔牡丹相得益彰，美人與名花長使君王帶笑觀看。動人姿色似春風能消無限怨恨，在沉香亭北君王貴妃雙依欄杆。</p>
+        <h3>註釋</h3>
+        <p>清平調：一種歌的曲調，“平調、清調、瑟調”皆周房中之遺聲。<br>
+          傾國：指絕代佳人<br>
+          得：使<br>
+          春風：代指君王</p>
       </div>
-    </article>
-    <article class="text-newpoem" >
-      <img src="images/news3.jpg" alt="">
-      <div class="text-info">
-        <h2><a href="news3.html"><span class="false">名句</span>名花傾國兩相歡，常得君王帶笑看。</a></h2>
-        <p class="text-date">[2021年2月18日]</p>
-        <p><a href="#"><span class="keyword">名句</span></a><a href="#"><span class="keyword">唐代</span></a><a href="#"><span class="keyword">李白</span></a></p>
+      <div class="poem-explanation">
+        <h3>鑑賞</h3>
+        <p>這一首，總承一、二兩首，把牡丹和楊貴妃與君王揉合，融爲一體：首句寫名花與傾國相融；二句寫君王的歡愉，“帶笑看”三字，貫穿了三者，把牡丹、貴妃、明皇三位一體化了。三、四句寫君王在沉香亭依偎貴妃賞花，所有胸中憂恨全然消釋。人倚闌干、花在欄外，多麼優雅，多麼風流！全詩語言豔麗，句句金玉，字字流葩，人花交映，迷離恍惚。無怪乎深爲玄欣賞，貴妃喜愛。</p>
       </div>
-    </article>
-    <article class="text-newpoem" >
-      <img src="images/news4.jpg" alt="">
-      <div class="text-info">
-        <h2><a href="news4.html"><span class="false">名句</span>念橋邊紅藥，年年知爲誰生。</a></h2>
-        <p class="text-date">[2021年2月18日]</p>
-        <p><a href="#"><span class="keyword">名句</span></a><a href="#"><span class="keyword">宋代</span></a><a href="#"><span class="keyword">姜夔</span></a></p>
+      <div class="poem-background">
+        <h3>背景</h3>
+        <p>這首詩是李白在長安爲翰林時所作。有一次，唐明皇與楊貴妃在沉香亭觀賞牡丹，因命李白作新樂章，李白奉旨作了這章。</p>
+      </div>
+      <div class="poet">
+        <h3>李白</h3>
+        <img src="images/poet-libai.jpg" alt="李白" title="李白" class="poet">
+        <p>李白（701年－762年），字太白，號青蓮居士，唐朝浪漫主義詩人，被後人譽爲“詩仙”。祖籍隴西成紀(待考)，出生於西域碎葉城，4歲再隨父遷至劍南道綿州。李白存世詩文千餘篇，有《李太白集》傳世。762年病逝，享年61歲。其墓在今安徽當塗，四川江油、湖北安陸有紀念館。</p>
       </div>
     </article>
   </section>
