--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             <div class="dropbtn">相簿版型</div>
             <div class="dropdown-content">
               <a href="gallery.html">滿版型相簿</a>
-              <a href="gallery-4.html">一般型相簿</a>
+              <a href="gallery-slider.html">Slider相簿</a>
               <a href="gallery-flex.html">Flex Panel相簿</a>
               <a href="gallery-grid.html">Grid Image相簿</a>
             </div>
@@ -69,7 +69,7 @@
     <div class="aboutTop-content top-content">
       <h2 class="title">關於我們</h2>
       <p class="tagline">About Us</p>
-      <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
+      <a href="#startcontent" class="downarrow-link"><span class="downarrow">&raquo;</span></a>
     </div>
   </section>
   <!-- ==============================
