--- a/index-slider.html
+++ b/index-slider.html
@@ -51,7 +51,7 @@
             <div class="dropbtn">相簿版型</div>
             <div class="dropdown-content">
               <a href="gallery.html">滿版型相簿</a>
-              <a href="gallery-4.html">一般型相簿</a>
+              <a href="gallery-slider.html">Slider相簿</a>
               <a href="gallery-flex.html">Flex Panel相簿</a>
               <a href="gallery-grid.html">Grid Image相簿</a>
             </div>
@@ -107,8 +107,6 @@
         <h2>響應式網頁設計</h2>
       </div>
     </div>
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
     <div class="dots">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
@@ -233,5 +231,6 @@
   =================================== -->
   <script src="js/scripts.js"></script>
   <script src="js/slider.js"></script>
+  <script>carousel();</script>
 </body>
 </html>
