--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="dropbtn">相簿版型</div>
             <div class="dropdown-content">
               <a href="gallery.html">滿版型相簿</a>
-              <a href="gallery-4.html">一般型相簿</a>
+              <a href="gallery-slider.html">Slider相簿</a>
               <a href="gallery-flex.html">Flex Panel相簿</a>
               <a href="gallery-grid.html">Grid Image相簿</a>
             </div>
