--- a/news2.html
+++ b/news2.html
@@ -51,7 +51,7 @@
             <div class="dropbtn">相簿版型</div>
             <div class="dropdown-content">
               <a href="gallery.html">滿版型相簿</a>
-              <a href="gallery-4.html">一般型相簿</a>
+              <a href="gallery-slider.html">Slider相簿</a>
               <a href="gallery-flex.html">Flex Panel相簿</a>
               <a href="gallery-grid.html">Grid Image相簿</a>
             </div>
@@ -67,9 +67,9 @@
   <section class="aboutTop top-container">
     <img src="images/top-news.jpg" alt="">
     <div class="aboutTop-content top-content">
-      <h2 class="title">最新詩詞</h2>
+      <h2 class="title"><a href="news-text.html">最新詩詞</a></h2>
       <p class="tagline">Latest Poetry</p>
-      <a href="#startcontent"><span class="top-downarrow">&raquo;</span></a>
+      <a href="#startcontent" class="downarrow-link"><span class="downarrow">&raquo;</span></a>
     </div>
   </section>
   <!-- ==============================
