--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
       <div class="gallery-overlayInner">
         <button type="button" class="galleryCloseBtn">&#10008; Close</button>
         <div class="gallery-overlayImage">
-          <img src="" alt="">
+          <img src="">
         </div>
         <a class="overlayBtn gallery-prev" onclick="plusImages(-1)"><span>&cularr;</span></a>
         <a class="overlayBtn gallery-next" onclick="plusImages(1)"><span>&curarr;</span></a>
@@ -89,64 +89,64 @@
     </div>
     <div class="gallery-container">
       <div class="gallery-image" data-no="1">
-        <img src="images/gallery1.jpg" alt="">
+        <img src="images/gallery1.jpg">
       </div>
       <div class="gallery-image" data-no="2">
-        <img src="images/gallery2.jpg" alt="">
+        <img src="images/gallery2.jpg">
       </div>
       <div class="gallery-image" data-no="3">
-        <img src="images/gallery3.jpg" alt="">
+        <img src="images/gallery3.jpg">
       </div>
       <div class="gallery-image" data-no="4">
-        <img src="images/gallery4.jpg" alt="">
+        <img src="images/gallery4.jpg">
       </div>
       <div class="gallery-image" data-no="5">
-        <img src="images/gallery5.jpg" alt="">
+        <img src="images/gallery5.jpg">
       </div>
       <div class="gallery-image" data-no="6">
-        <img src="images/gallery6.jpg" alt="">
+        <img src="images/gallery6.jpg">
       </div>
       <div class="gallery-image" data-no="7">
-        <img src="images/gallery7.jpg" alt="">
+        <img src="images/gallery7.jpg">
       </div>
       <div class="gallery-image" data-no="8">
-        <img src="images/gallery8.jpg" alt="">
+        <img src="images/gallery8.jpg">
       </div>
       <div class="gallery-image" data-no="9">
-        <img src="images/gallery9.jpg" alt="">
+        <img src="images/gallery9.jpg">
       </div>
       <div class="gallery-image" data-no="10">
-        <img src="images/gallery10.jpg" alt="">
+        <img src="images/gallery10.jpg">
       </div>
       <div class="gallery-image" data-no="11">
-        <img src="images/gallery11.jpg" alt="">
+        <img src="images/gallery11.jpg">
       </div>
       <div class="gallery-image" data-no="12">
-        <img src="images/gallery12.jpg" alt="">
+        <img src="images/gallery12.jpg">
       </div>
       <div class="gallery-image" data-no="13">
-        <img src="images/gallery13.jpg" alt="">
+        <img src="images/gallery13.jpg">
       </div>
       <div class="gallery-image" data-no="14">
-        <img src="images/gallery14.jpg" alt="">
+        <img src="images/gallery14.jpg">
       </div>
       <div class="gallery-image" data-no="15">
-        <img src="images/gallery15.jpg" alt="">
+        <img src="images/gallery15.jpg">
       </div>
       <div class="gallery-image" data-no="16">
-        <img src="images/gallery16.jpg" alt="">
+        <img src="images/gallery16.jpg">
       </div>
       <div class="gallery-image" data-no="17">
-        <img src="images/gallery17.jpg" alt="">
+        <img src="images/gallery17.jpg">
       </div>
       <div class="gallery-image" data-no="18">
-        <img src="images/gallery18.jpg" alt="">
+        <img src="images/gallery18.jpg">
       </div>
       <div class="gallery-image" data-no="19">
-        <img src="images/gallery19.jpg" alt="">
+        <img src="images/gallery19.jpg">
       </div>
       <div class="gallery-image" data-no="20">
-        <img src="images/gallery20.jpg" alt="">
+        <img src="images/gallery20.jpg">
       </div>
     </div>
   </section>
