--- a/gallery-flex.html
+++ b/gallery-flex.html
@@ -77,6 +77,56 @@
   <section id="startcontent" class="gallery">
     <h2 class="title">相簿集</h2>
     <p class="tagline">Photo Gallery</p>
+    <div class="gallery-flex-container">
+      <div class="gallery-flex-column">
+        <img src="images/gallery4.jpg">
+        <img src="images/gallery5.jpg">
+        <img src="images/gallery1.jpg">
+        <img src="images/gallery2.jpg">
+        <img src="images/gallery3.jpg">
+        <img src="images/gallery6.jpg">
+        <img src="images/gallery7.jpg">
+        <img src="images/gallery8.jpg">
+        <img src="images/gallery9.jpg">
+        <img src="images/gallery19.jpg">
+      </div>
+      <div class="gallery-flex-column">
+        <img src="images/gallery17.jpg">
+        <img src="images/gallery14.jpg">
+        <img src="images/gallery20.jpg">
+        <img src="images/gallery11.jpg">
+        <img src="images/gallery12.jpg">
+        <img src="images/gallery13.jpg">
+        <img src="images/gallery10.jpg">
+        <img src="images/gallery15.jpg">
+        <img src="images/gallery16.jpg">
+        <img src="images/gallery18.jpg">
+      </div>
+      <div class="gallery-flex-column">
+      <img src="images/gallery4.jpg">
+      <img src="images/gallery5.jpg">
+      <img src="images/gallery1.jpg">
+      <img src="images/gallery2.jpg">
+      <img src="images/gallery3.jpg">
+      <img src="images/gallery6.jpg">
+      <img src="images/gallery7.jpg">
+      <img src="images/gallery8.jpg">
+      <img src="images/gallery9.jpg">
+      <img src="images/gallery19.jpg">
+      </div>
+      <div class="gallery-flex-column">
+      <img src="images/gallery17.jpg">
+      <img src="images/gallery14.jpg">
+      <img src="images/gallery20.jpg">
+      <img src="images/gallery11.jpg">
+      <img src="images/gallery12.jpg">
+      <img src="images/gallery13.jpg">
+      <img src="images/gallery10.jpg">
+      <img src="images/gallery15.jpg">
+      <img src="images/gallery16.jpg">
+      <img src="images/gallery18.jpg">
+      </div>
+    </div>
   </section>
   <!-- ==============================
   footer
@@ -89,6 +139,5 @@
   script
   =================================== -->
   <script src="js/scripts.js"></script>
-  <script src="js/gallery.js"></script>
 </body>
 </html>
