--- a/gallery-grid.html
+++ b/gallery-grid.html
@@ -77,6 +77,16 @@
   <section id="startcontent" class="gallery">
     <h2 class="title">相簿集</h2>
     <p class="tagline">Photo Gallery</p>
+    <div class="gallery-content gallery-overlay">
+      <div class="gallery-overlayInner">
+        <button type="button" class="galleryCloseBtn">&#10008; Close</button>
+        <div class="gallery-overlayImage">
+          <img src="">
+        </div>
+      </div>
+    </div>
+    <div class="gallery-grid-container">
+    </div>
   </section>
   <!-- ==============================
   footer
@@ -89,6 +99,6 @@
   script
   =================================== -->
   <script src="js/scripts.js"></script>
-  <script src="js/gallery.js"></script>
+  <script src="js/gallery-grid.js"></script>
 </body>
 </html>
