--- a/gallery-slider.html
+++ b/gallery-slider.html
@@ -81,108 +81,108 @@
       <div class="gallery-slide-container">
         <div class="gallery-slide slide">
           <div class="numbertext">1</div>
-          <img src="images/gallery1.jpg" alt="">
+          <img src="images/gallery1.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">2</div>
-          <img src="images/gallery2.jpg" alt="">
+          <img src="images/gallery2.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">3</div>
-          <img src="images/gallery3.jpg" alt="">
+          <img src="images/gallery3.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">4</div>
-          <img src="images/gallery4.jpg" alt="">
+          <img src="images/gallery4.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">5</div>
-          <img src="images/gallery5.jpg" alt="">
+          <img src="images/gallery5.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">6</div>
-          <img src="images/gallery6.jpg" alt="">
+          <img src="images/gallery6.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">7</div>
-          <img src="images/gallery7.jpg" alt="">
+          <img src="images/gallery7.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">8</div>
-          <img src="images/gallery8.jpg" alt="">
+          <img src="images/gallery8.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">9</div>
-          <img src="images/gallery9.jpg" alt="">
+          <img src="images/gallery9.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">10</div>
-          <img src="images/gallery10.jpg" alt="">
+          <img src="images/gallery10.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">11</div>
-          <img src="images/gallery11.jpg" alt="">
+          <img src="images/gallery11.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">12</div>
-          <img src="images/gallery12.jpg" alt="">
+          <img src="images/gallery12.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">13</div>
-          <img src="images/gallery13.jpg" alt="">
+          <img src="images/gallery13.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">14</div>
-          <img src="images/gallery14.jpg" alt="">
+          <img src="images/gallery14.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">15</div>
-          <img src="images/gallery15.jpg" alt="">
+          <img src="images/gallery15.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">16</div>
-          <img src="images/gallery16.jpg" alt="">
+          <img src="images/gallery16.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">17</div>
-          <img src="images/gallery17.jpg" alt="">
+          <img src="images/gallery17.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">18</div>
-          <img src="images/gallery18.jpg" alt="">
+          <img src="images/gallery18.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">19</div>
-          <img src="images/gallery19.jpg" alt="">
+          <img src="images/gallery19.jpg">
         </div>
         <div class="gallery-slide slide">
           <div class="numbertext">20</div>
-          <img src="images/gallery20.jpg" alt="">
+          <img src="images/gallery20.jpg">
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
       <div class="dots thumbnails">
-        <img class="dot thumbnail" src="images/gallery1.jpg" alt="" onclick="currentSlide(1)">
-        <img class="dot thumbnail" src="images/gallery2.jpg" alt="" onclick="currentSlide(2)">
-        <img class="dot thumbnail" src="images/gallery3.jpg" alt="" onclick="currentSlide(3)">
-        <img class="dot thumbnail" src="images/gallery4.jpg" alt="" onclick="currentSlide(4)">
-        <img class="dot thumbnail" src="images/gallery5.jpg" alt="" onclick="currentSlide(5)">
-        <img class="dot thumbnail" src="images/gallery6.jpg" alt="" onclick="currentSlide(6)">
-        <img class="dot thumbnail" src="images/gallery7.jpg" alt="" onclick="currentSlide(7)">
-        <img class="dot thumbnail" src="images/gallery8.jpg" alt="" onclick="currentSlide(8)">
-        <img class="dot thumbnail" src="images/gallery9.jpg" alt="" onclick="currentSlide(9)">
-        <img class="dot thumbnail" src="images/gallery10.jpg" alt="" onclick="currentSlide(10)">
-        <img class="dot thumbnail" src="images/gallery11.jpg" alt="" onclick="currentSlide(11)">
-        <img class="dot thumbnail" src="images/gallery12.jpg" alt="" onclick="currentSlide(12)">
-        <img class="dot thumbnail" src="images/gallery13.jpg" alt="" onclick="currentSlide(13)">
-        <img class="dot thumbnail" src="images/gallery14.jpg" alt="" onclick="currentSlide(14)">
-        <img class="dot thumbnail" src="images/gallery15.jpg" alt="" onclick="currentSlide(15)">
-        <img class="dot thumbnail" src="images/gallery16.jpg" alt="" onclick="currentSlide(16)">
-        <img class="dot thumbnail" src="images/gallery17.jpg" alt="" onclick="currentSlide(17)">
-        <img class="dot thumbnail" src="images/gallery18.jpg" alt="" onclick="currentSlide(18)">
-        <img class="dot thumbnail" src="images/gallery19.jpg" alt="" onclick="currentSlide(19)">
-        <img class="dot thumbnail" src="images/gallery20.jpg" alt="" onclick="currentSlide(20)">
+        <img class="dot thumbnail" src="images/gallery1.jpg" onclick="currentSlide(1)">
+        <img class="dot thumbnail" src="images/gallery2.jpg" onclick="currentSlide(2)">
+        <img class="dot thumbnail" src="images/gallery3.jpg" onclick="currentSlide(3)">
+        <img class="dot thumbnail" src="images/gallery4.jpg" onclick="currentSlide(4)">
+        <img class="dot thumbnail" src="images/gallery5.jpg" onclick="currentSlide(5)">
+        <img class="dot thumbnail" src="images/gallery6.jpg" onclick="currentSlide(6)">
+        <img class="dot thumbnail" src="images/gallery7.jpg" onclick="currentSlide(7)">
+        <img class="dot thumbnail" src="images/gallery8.jpg" onclick="currentSlide(8)">
+        <img class="dot thumbnail" src="images/gallery9.jpg" onclick="currentSlide(9)">
+        <img class="dot thumbnail" src="images/gallery10.jpg" onclick="currentSlide(10)">
+        <img class="dot thumbnail" src="images/gallery11.jpg" onclick="currentSlide(11)">
+        <img class="dot thumbnail" src="images/gallery12.jpg" onclick="currentSlide(12)">
+        <img class="dot thumbnail" src="images/gallery13.jpg" onclick="currentSlide(13)">
+        <img class="dot thumbnail" src="images/gallery14.jpg" onclick="currentSlide(14)">
+        <img class="dot thumbnail" src="images/gallery15.jpg" onclick="currentSlide(15)">
+        <img class="dot thumbnail" src="images/gallery16.jpg" onclick="currentSlide(16)">
+        <img class="dot thumbnail" src="images/gallery17.jpg" onclick="currentSlide(17)">
+        <img class="dot thumbnail" src="images/gallery18.jpg" onclick="currentSlide(18)">
+        <img class="dot thumbnail" src="images/gallery19.jpg" onclick="currentSlide(19)">
+        <img class="dot thumbnail" src="images/gallery20.jpg" onclick="currentSlide(20)">
       </div>
     </div>
   </section>
